# bookmarks-app

./: .gitignore  Makefile  README.md  cert.crt  cert.key  pyproject.toml  setup.cfg
bookmarks/: settings.py  urls.py
bookmarks/account/: apps.py  authentication.py  forms.py  models.py  urls.py  views.py
bookmarks/account/migrations/: 0001_initial.py  0002_contact_contact_account_con_created_8bdae6_idx.py
bookmarks/account/templates/: base.html
bookmarks/account/templates/account/: dashboard.html  login.html
bookmarks/account/templates/account/user/: detail.html  list.html
bookmarks/account/templates/registration/: logged_out.html  login.html
bookmarks/actions/: apps.py  models.py  utils.py
bookmarks/actions/migrations/: 0001_initial.py
bookmarks/images/: apps.py  forms.py  models.py  urls.py  views.py
bookmarks/images/migrations/: 0001_initial.py  0002_image_total_likes_and_more.py
bookmarks/images/static/js/: bookmarklet.js
bookmarks/images/templates/images/image/: detail.html  ranking.html
