[tool.poetry]
name = "bookmarks-app"
version = "0.1.0"
description = ""
authors = ["Anton Shefer <rezajkee@mail.ru>"]
readme = "README.md"
packages = [{include = "bookmarks_app"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"
django-extensions = "^3.2.1"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
extend-exclude = '''
/(
  | migrations
)/
'''