[tool.poetry]
name = "bookmarks-app"
version = "0.1.0"
description = ""
authors = ["Anton Shefer <rezajkee@mail.ru>"]
readme = "README.md"
packages = [{include = "bookmarks_app"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"
django-extensions = "^3.2.1"
python-dotenv = "^0.21.0"
Pillow = "^9.3.0"
social-auth-app-django = "^5.0.0"
requests = "^2.28.1"
easy-thumbnails = "^2.8.3"


[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
flake8-django = "^1.1.5"
Werkzeug = "^2.2.2"
pyOpenSSL = "^22.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
extend-exclude = '''
/(
  | migrations
)/
'''